# Azure-QueueBridge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRE_PUBLISH_CHECKLIST.md  README.md  SECURITY.md
receiver/: .env.example  Dockerfile  README.md  pyproject.toml  receiver_worker.py  requirements.txt
receiver/classes/: queue_client.py
receiver/config/: logging_setup.py  settings.py
sender/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  sender_api.py
sender/classes/: queue_client.py
sender/config/: logging_setup.py  settings.py
